--- a/app/src/main/res/layout/activity_book_detail.xml
+++ b/app/src/main/res/layout/activity_book_detail.xml
@@ -3,9 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
-    android:background="@drawable/linear_background"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/linear_background"
     tools:context=".BookDetail">
 
 
@@ -17,54 +17,42 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:gravity="center"
             android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
+                android:padding="20dp"
                 tools:ignore="MissingConstraints">
 
                 <ImageView
                     android:id="@+id/IconCLose"
                     android:layout_width="48dp"
                     android:layout_height="48dp"
-                    android:padding="8dp"
-                    android:src="@drawable/icon_close"
-                    android:background="?attr/selectableItemBackground"
-                    app:tint="@color/white"
+                    android:background="@drawable/background_button"
                     android:contentDescription="Back"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginTop="16dp" />
+                    android:padding="12dp"
+                    android:src="@drawable/icon_close"
+                    app:tint="@color/white" />
 
                 <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:layout_marginLeft="230dp">
-                    <ImageView
-                        android:id="@+id/bookIcon"
-                        android:layout_width="48dp"
-                        android:layout_height="48dp"
-                        android:padding="8dp"
-                        android:src="@drawable/ic_like_state"
-                        android:background="?attr/selectableItemBackground"
-                        app:tint="@color/white"
-                        android:contentDescription="Favorite"
-                        android:layout_marginEnd="8dp"
-                        android:layout_marginTop="16dp" />
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="center|end"
+                    android:orientation="horizontal">
 
                     <ImageView
                         android:id="@+id/IconShare"
-                        android:layout_width="48dp"
-                        android:layout_height="48dp"
-                        android:padding="8dp"
-                        android:src="@drawable/ic_hierarchy2"
+                        android:layout_width="32dp"
+                        android:layout_height="32dp"
                         android:background="?attr/selectableItemBackground"
-                        app:tint="@color/white"
                         android:contentDescription="Share"
-                        android:layout_marginEnd="16dp"
-                        android:layout_marginTop="16dp" />
+                        android:padding="5dp"
+                        android:src="@drawable/ic_hierarchy2"
+                        app:tint="@color/white" />
                 </LinearLayout>
             </LinearLayout>
 
@@ -72,10 +60,10 @@
                 android:id="@+id/bookCoverDetail"
                 android:layout_width="150dp"
                 android:layout_height="220dp"
+                android:layout_gravity="center"
                 android:layout_marginTop="70dp"
                 android:scaleType="centerCrop"
-                android:src="@drawable/nhagiakim"
-                android:layout_gravity="center" />
+                android:src="@drawable/nhagiakim" />
 
             <LinearLayout
                 android:id="@+id/bookInfoSection"
@@ -85,15 +73,15 @@
                 android:background="@drawable/border_rounded"
                 android:elevation="8dp"
                 android:orientation="vertical"
-                android:paddingVertical="15dp"
-                android:paddingHorizontal="25dp">
+                android:paddingHorizontal="25dp"
+                android:paddingVertical="15dp">
 
                 <TextView
                     android:id="@+id/bookTitleDetail"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/bevietnampro_bold"
                     android:layout_marginBottom="10dp"
+                    android:fontFamily="@font/bevietnampro_bold"
                     android:text="Nhà Giả Kim"
                     android:textColor="@color/white"
                     android:textSize="20sp"
@@ -109,8 +97,8 @@
                         android:layout_width="24dp"
                         android:layout_height="20dp"
                         android:layout_marginEnd="10sp"
-                        app:tint="@color/white"
-                        android:src="@drawable/canhan_f" />
+                        android:src="@drawable/canhan_f"
+                        app:tint="@color/white" />
 
                     <TextView
                         android:id="@+id/bookAuthorDetail"
@@ -131,8 +119,8 @@
                         android:layout_width="24dp"
                         android:layout_height="20dp"
                         android:layout_marginEnd="10sp"
-                        app:tint="@color/white"
-                        android:src="@drawable/textalignleft" />
+                        android:src="@drawable/textalignleft"
+                        app:tint="@color/white" />
 
                     <TextView
                         android:id="@+id/bookGenreDetail"
@@ -146,16 +134,16 @@
 
                 <LinearLayout
                     android:layout_width="wrap_content"
-                    android:layout_marginVertical="20dp"
                     android:layout_height="wrap_content"
+                    android:layout_marginVertical="20dp"
                     android:orientation="horizontal">
 
                     <ImageView
                         android:layout_width="24dp"
                         android:layout_height="20dp"
                         android:layout_marginEnd="10sp"
-                        app:tint="@color/white"
-                        android:src="@drawable/star1" />
+                        android:src="@drawable/star1"
+                        app:tint="@color/white" />
 
                     <TextView
                         android:id="@+id/bookRatingDetail"
@@ -177,8 +165,8 @@
                         android:layout_width="24dp"
                         android:layout_height="20dp"
                         android:layout_marginEnd="10sp"
-                        app:tint="@color/white"
-                        android:src="@drawable/archive" />
+                        android:src="@drawable/archive"
+                        app:tint="@color/white" />
 
                     <TextView
                         android:id="@+id/bookPriceDetail"
@@ -200,8 +188,8 @@
                         android:layout_width="24dp"
                         android:layout_height="20dp"
                         android:layout_marginEnd="10sp"
-                        app:tint="@color/white"
-                        android:src="@drawable/archive" />
+                        android:src="@drawable/archive"
+                        app:tint="@color/white" />
 
                     <TextView
                         android:id="@+id/bookDescription"
