--- a/app/src/main/res/layout/item_history.xml
+++ b/app/src/main/res/layout/item_history.xml
@@ -54,8 +54,8 @@
 
                     <ImageButton
                         android:id="@+id/imageButton"
-                        android:layout_width="15dp"
-                        android:layout_height="15dp"
+                        android:layout_width="18dp"
+                        android:layout_height="18dp"
                         android:background="@color/white"
                         app:srcCompat="@drawable/ic_canhan" />
 
@@ -71,18 +71,11 @@
                         android:textSize="12sp" />
                 </LinearLayout>
 
-                <ProgressBar
-                    android:id="@+id/progressBar"
-                    style="?android:attr/progressBarStyleHorizontal"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="clip_horizontal|fill"
-                    android:indeterminate="false" />
 
             </LinearLayout>
 
             <ImageButton
-                android:id="@+id/imageButton3"
+                android:id="@+id/arrowDownButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
