--- a/app/src/main/res/layout/activity_dialog_added_book.xml
+++ b/app/src/main/res/layout/activity_dialog_added_book.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/border_dialog"
-    tools:context=".Dialog_Added_Book">
+    tools:context=".ui.Dialog_Added_Book">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
