--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:background="#357C97"
     android:orientation="vertical"
-    tools:context="com.example.project.MainActivity">
+    tools:context="com.example.project.ui.MainActivity">
 
 
     <ImageView
