--- a/app/src/main/res/layout/item_trending_book.xml
+++ b/app/src/main/res/layout/item_trending_book.xml
@@ -9,7 +9,8 @@
         android:layout_width="120dp"
         android:layout_height="120dp"
         android:src="@color/teal_700"
+        android:scaleType="centerCrop"
         android:background="@drawable/background_trending_book"
-        android:padding="10dp" />
+        android:padding="8dp" />
 
 </LinearLayout>
