--- a/app/src/main/res/layout/item_recommended.xml
+++ b/app/src/main/res/layout/item_recommended.xml
@@ -2,11 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:layout_marginEnd="10dp"
     android:orientation="vertical">
 
     <ImageView
         android:id="@+id/image_button2"
         android:layout_width="115dp"
         android:layout_height="172dp"
+        android:paddingBottom="20dp"
         android:background="@color/white" />
 </LinearLayout>
